Fix spacing between content and side bar on smaller devices

--- a/nitratine/static/css/blog.css
+++ b/nitratine/static/css/blog.css
@@ -177,6 +177,13 @@ table img {
     overflow: hidden;
 }
 
+@media (max-width: 992px) {
+    /* Add margin to the top of the sidebar when under content */
+    .col-blog-sidebar {
+        margin-top: 1rem;
+    }
+}
+
 /* GitHub Component */
 
 .github-summary {
